Fixed alignment issue with homepage nav.

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -295,7 +295,7 @@ main{
           margin: 2vh;
           background-color: white;
           border: solid $palette-light-grey 2px;
-          width: 24vw;
+          width: 25vw;
           height: 75vh;
           box-shadow: 6px 4px 20px 0px $palette-light-grey;
           a{
